--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
-    "presets": ["@babel/preset-env"],
-    "plugins": [
-      [
-        "babel-plugin-root-import",
-        {
-          "rootPathSuffix": "./",
-          "rootPathPrefix": "@"
-        }
-      ]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    [
+      "babel-plugin-root-import",
+      {
+        "rootPathSuffix": "./src/",
+        "rootPathPrefix": "@"
+      }
     ]
-  }
+  ]
+}
