--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specidied\" && exit 1",
     "start": "npm run dev",
-    "dev": "set NODE_ENV=development && nodemon --exec babel-node ./src/bin/www",
+    "dev": "set NODE_ENV=development && nodemon --exec babel-node -r dotenv/config ./src/bin/www",
     "prod": "set NODE_ENV=production npm-run-all clean build && node ./dist/bin/www",
     "clean": "shx rm -r dist",
     "build": "babel ./src -d dist"
@@ -14,9 +14,10 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
